# TEST_PRODUCT

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
backend/: Dockerfile  main.py  requirements.txt
backend/api/helpers/: exception_handler.py
backend/api/models/: text2image.py
backend/api/routers/: text2image.py
backend/infra/load_model/: __init__.py  load_model.py
backend/shared/base/: __init__.py
backend/shared/settings/: __init__.py  settings.py
backend/shared/settings/models/: __init__.py  t2i.py
backend/test/: test_t2i.py
frontend/: index.html
