[project]
name = "test-product"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.9.0",
    "diffusers>=0.34.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "peft>=0.17.0",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "safetensors>=0.6.1",
    "structlog>=25.4.0",
    "torch>=2.8.0",
    "transformers>=4.55.0",
    "uvicorn>=0.35.0",
]
